--- a/src/app/components/lista-productos/lista-productos.component.html
+++ b/src/app/components/lista-productos/lista-productos.component.html
@@ -4,8 +4,8 @@
   <vex-page-layout-header class="flex flex-col items-start justify-center">
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
-        <h1 class="title mt-0 mb-1">Artículos</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Artículos']"></vex-breadcrumbs>
+        <h1 class="title mt-0 mb-1">Productos</h1>
+        <vex-breadcrumbs [crumbs]="['Catálogos','Productos']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
@@ -17,13 +17,13 @@
       >
         <div class="xl:w-1/12 lg:w-1/12 md:w-1/12 flex justify-center">
           <!-- <button (click)="openModal(null)" class="" color="primary" mat-mini-fab
-          matTooltip="Agregar Articulo" type="button">
+          matTooltip="Agregar Producto" type="button">
           <mat-icon svgIcon="mat:add"></mat-icon>
         </button> -->
 
           <button
             (click)="openModal(null)"
-            matTooltip="Agregar Articulo"
+            matTooltip="Agregar Producto"
             class="bg-gray-400 hover:bg-gray-500 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
           >
             <svg
@@ -214,7 +214,7 @@
                     type="button">
                     <mat-icon svgIcon="mat:signal_cellular_alt"></mat-icon>
                   </button> -->
-                  <button
+                  <!-- <button
                     (click)="openModalGraficas(item)"
                     matTooltip="Gráficas"
                     class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
@@ -247,7 +247,7 @@
                       512,438.633 	"
                       />
                     </svg>
-                  </button>
+                  </button> -->
                 </div>
                 <div class="mr-5">
                   <!-- <button color="basic" mat-mini-fab matTooltip="Descargar documentación"
@@ -274,7 +274,7 @@
                   <div class="flex justify-center">
                     <mat-slide-toggle
                       [checked]="true"
-                      (change)="EliminarArticulo(item)"
+                      (change)="EliminarProducto(item)"
                     ></mat-slide-toggle>
                   </div>
                   <div>Deshabilitar</div>
@@ -340,7 +340,7 @@
               <div class="flex justify-center">
                 <a
                   (click)="openModal(row)"
-                  matTooltip="Editar articulo"
+                  matTooltip="Editar producto"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
@@ -355,8 +355,8 @@
                   <mat-icon class="icon-sm" svgIcon="mat:list"></mat-icon>
                 </a>
                 <a
-                  (click)="EliminarArticulo(row)"
-                  matTooltip="Eliminar articulo"
+                  (click)="EliminarProducto(row)"
+                  matTooltip="Eliminar producto"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
@@ -377,7 +377,7 @@
           class="flex-auto items-center justify-center"
         >
           <h1 class="m-10 headline2" style="text-align: center">
-            No se encontraron articulos registrados
+            No se encontraron productos registrados
           </h1>
         </div>
         <mat-paginator
