--- a/src/app/components/lista-software/lista-software.component.html
+++ b/src/app/components/lista-software/lista-software.component.html
@@ -5,7 +5,7 @@
       <div class="w-full flex flex-col sm:flex-row justify-between">
         <div>
           <h1 class="title mt-0 mb-1">Software</h1>
-          <vex-breadcrumbs [crumbs]="['Software']"></vex-breadcrumbs>
+          <vex-breadcrumbs [crumbs]="['Catálogos','Software']"></vex-breadcrumbs>
         </div>
       </div>
     </vex-page-layout-header>
