--- a/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
+++ b/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
@@ -4,8 +4,8 @@
   <vex-page-layout-header class="flex flex-col items-start justify-center">
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
-        <h1 class="title mt-0 mb-1">Propietarios</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Propietarios']"></vex-breadcrumbs>
+        <h1 class="title mt-0 mb-1">Categoria Producto</h1>
+        <vex-breadcrumbs [crumbs]="['Catálogos','Categoria Producto']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
@@ -18,13 +18,13 @@
       >
         <div class="xl:w-1/12 lg:w-1/12 md:w-1/12 flex justify-center">
           <!-- <button (click)="openModal(null)" class="" color="primary" mat-mini-fab
-          matTooltip="Agregar Propietario" type="button">
+          matTooltip="Agregar Fabricante" type="button">
           <mat-icon svgIcon="mat:add"></mat-icon>
         </button> -->
 
           <button
             (click)="openModal(null)"
-            matTooltip="Agregar Propietario"
+            matTooltip="Agregar Fabricante"
             class="bg-gray-400 hover:bg-gray-500 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
           >
             <svg
@@ -115,25 +115,12 @@
             >
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Razon Social: {{ item.razonsocial }}</div>
+                <div class="text-center">Nombre: {{ item.nombre }}</div>
               </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Sigla: {{ item.sigla }}</div>
+                <div class="text-center">Estatico: {{ item.estatico }}</div>
               </div>
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">RFC: {{ item.rfc }}</div>
-              </div>
-              <mat-divider></mat-divider>
-              <!-- <div class="flex justify-between items-center mb-10">
-                <div>
-                  Cuenta:
-                </div>
-                <div>
-                  Rol:
-                </div>
-              </div> -->
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center">
                 <div class="mr-5">
@@ -191,7 +178,7 @@
                   <div class="flex justify-center">
                     <mat-slide-toggle
                       [checked]="true"
-                      (change)="EliminarPropietario(item)"
+                      (change)="EliminarFabricante(item)"
                     ></mat-slide-toggle>
                   </div>
                   <div>Deshabilitar</div>
@@ -217,38 +204,26 @@
           mat-table
           matSort
         >
-          <ng-container matColumnDef="razonsocial">
+          <ng-container matColumnDef="nombre">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
-              Razón Social
+              Nombre
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="Razón social">
+            <mat-cell *matCellDef="let row" data-label="Nombre">
               <div>
-                {{ row.razonsocial }}
+                {{ row.nombre }}
               </div>
             </mat-cell>
           </ng-container>
-
-          <ng-container matColumnDef="sigla">
+          <ng-container matColumnDef="estatico">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
-              Sigla
+              Estatico
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="Sigla">
+            <mat-cell *matCellDef="let row" data-label="Estatico">
               <div>
-                {{ row.sigla }}
+                {{ row.estatico }}
               </div>
             </mat-cell>
           </ng-container>
-          <ng-container matColumnDef="rfc">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>
-              RFC
-            </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="RFC">
-              <div>
-                {{ row.rfc }}
-              </div>
-            </mat-cell>
-          </ng-container>
-
           <ng-container matColumnDef="actions">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               Acción
@@ -257,7 +232,7 @@
               <div class="flex justify-center">
                 <a
                   (click)="openModal(row)"
-                  matTooltip="Editar propietario"
+                  matTooltip="Editar Fabricante"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
@@ -272,8 +247,8 @@
                   <mat-icon class="icon-sm" svgIcon="mat:list"></mat-icon>
                 </a> -->
                 <a
-                  (click)="EliminarPropietario(row)"
-                  matTooltip="Eliminar propietario"
+                  (click)="EliminarFabricante(row)"
+                  matTooltip="Eliminar Fabricante"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
@@ -294,7 +269,7 @@
           class="flex-auto items-center justify-center"
         >
           <h1 class="m-10 headline2" style="text-align: center">
-            No se encontraron propietarios registrados
+            No se encontraron Fabricantes registrados
           </h1>
         </div>
         <mat-paginator
@@ -305,3 +280,5 @@
     </div>
   </vex-page-layout-content>
 </vex-page-layout>
+
+
