--- a/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
+++ b/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
@@ -1,6 +1,6 @@
 <form role="form" autocomplete="off" [formGroup]="formPropietario" novalidate>
   <div class="flex items-center " style="border: none !important" mat-dialog-title >
-    <h2 class="headline m-0 flex-auto">{{this.propietarioModel.id > 0 ? 'Editar propietario ' : 'Agregar propietario '}} <b>{{this.propietarioModel.razonSocial}}</b></h2>
+    <h2 class="headline m-0 flex-auto">{{this.propietarioModel.id > 0 ? 'Editar cliente ' : 'Agregar cliente '}} <b>{{this.propietarioModel.nombre}}</b></h2>
     <button></button>
     <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
     <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
@@ -10,6 +10,18 @@
   <mat-divider class="-mx-6 text-border"></mat-divider>
   <mat-dialog-content class="px-1 ">
     <div class="mt-4 flex flex-col gap-2  m-2">
+      <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
+        <mat-form-field class="flex-auto">
+          <mat-label>Nombre</mat-label>
+          <input type="text" matInput formControlName="nombre" maxlength="2000">
+          <mat-error *ngIf="this.nombre.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
+        <mat-form-field class="flex-auto">
+          <mat-label>Direccion</mat-label>
+          <input type="text" matInput formControlName="direccion">
+          <mat-error *ngIf="this.direccion.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
+      </div>
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
           <mat-label>Razón social</mat-label>
@@ -28,7 +40,16 @@
         </mat-form-field>
       </div>
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
-
+        <mat-form-field class="flex-auto">
+          <mat-label>Longitud</mat-label>
+          <input type="text" matInput formControlName="longitud" maxlength="2000">
+          <mat-error *ngIf="this.longitud.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
+        <mat-form-field class="flex-auto">
+          <mat-label>Latitud</mat-label>
+          <input type="text" matInput formControlName="latitud">
+          <mat-error *ngIf="this.latitud.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
       </div>
     </div>
 
@@ -41,3 +62,4 @@
   </mat-dialog-actions>
 
   </form>
+
